--- a/styles/chatbot.css
+++ b/styles/chatbot.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Pragati+Narrow&display=swap");
+
 body {
   display: flex;
   flex-direction: column;
@@ -8,16 +10,83 @@ body {
 }
 
 #header {
-  text-align: center;
-  font-size: 20px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Pragati Narrow", sans-serif;
+  font-size: 25px;
   font-weight: bold;
-  padding-top: 20px;
+  padding-bottom: 10px;
+  border-bottom: solid 1px #acacac;
+}
+
+#header #back-button i {
+  font-size: 1.5em;
+  color: #323949;
+}
+#header #help-button i {
+  font-size: 1.5em;
+  color: #323949;
+}
+
+#header #back-button,
+#header #help-button {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+}
+
+#header #back-button {
+  left: 10px;
+}
+
+#header #help-button {
+  right: 10px;
 }
 
 #chat-space {
   flex-grow: 1;
   overflow-y: auto;
   padding: 10px;
+  scrollbar-width: none; /* Firefox */
+}
+
+#chat-space::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge */
+}
+.user-container,
+.bot-container {
+  width: 100%;
+  display: flex;
+}
+
+.user-container {
+  justify-content: flex-end;
+}
+
+.bot-container {
+  justify-content: flex-start;
+}
+
+.user-message,
+.bot-message {
+  max-width: 90%;
+  word-wrap: break-word;
+  padding: 10px;
+  border-radius: 0px;
+}
+
+.user-message {
+  text-align: right;
+  color: #323949;
+  background-color: #ffee6c;
+}
+
+.bot-message {
+  text-align: left;
+  color: #ffffff;
+  background-color: #323949;
 }
 
 #footer {
@@ -26,6 +95,30 @@ body {
   padding: 10px;
 }
 
-#input-text {
-  width: 80%;
+#footer #input-text {
+  width: 75%;
+  border: 2px solid #323949;
+  border-radius: 1em;
+  height: 3em;
+  padding-left: 1em;
+  color: #acacac;
+
+  resize: none; /* 유저가 직접 크기를 조절하지 못하게 합니다. */
+  overflow: auto; /* 텍스트가 박스를 꽉 채우면 자동으로 아래로 넘어가게 합니다. */
+  white-space: pre-wrap;
+}
+
+#footer #send-button {
+  display: flex;
+  width: 17%;
+  height: 3em;
+  padding: 1.5em;
+  border-radius: 1em;
+  background-color: #323949;
+  color: white;
+  font-weight: bold;
+  font-family: "Pragati Narrow", sans-serif;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
