[Style] footer 수정

--- a/styles/chatbot.css
+++ b/styles/chatbot.css
@@ -93,6 +93,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 10px;
+  border-top: solid 1px #efefef;
 }
 
 #footer #input-text {
