--- a/styles/popup.css
+++ b/styles/popup.css
@@ -1,17 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Pragati+Narrow&display=swap");
 
-.loader {
-  border: 2px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 2px solid #323949;
-  width: 24px;
-  height: 24px;
-  animation: spin 2s linear infinite;
-  position: absolute;
-  top: calc(50% - 14px);
-  left: calc(50% - 14px);
-}
-
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -72,19 +60,24 @@ button {
   font-family: Pragati Narrow;
   font-weight: 700;
   word-wrap: break-word;
-  text-align: center;
-}
-
-#loader-button {
-  width: 50px;
-  height: 50px;
-  left: 20px;
-  top: 490px;
-  position: absolute;
-  background: #cbd1dc;
-  border-radius: 7px;
-  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
+  padding-right: 10px;
+}
+.loader {
+  border: 2px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 2px solid #323949;
+  width: 24px;
+  height: 24px;
+  animation: spin 2s linear infinite;
+  position: absolute;
+  right: 10px;
+  top: 22%;
+  transform: translateY(-50%);
+  display: none;
 }
 
 #description {
@@ -107,4 +100,22 @@ button {
   left: 70px;
   top: 180px;
   position: absolute;
+}
+#reset-button {
+  width: 50px;
+  height: 50px;
+  left: 20px;
+  top: 490px;
+  position: absolute;
+  background: #cbd1dc;
+  border-radius: 7px;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#reset-button i {
+  color: white;
+  font-size: 24px;
 }
