--- a/styles/popup.css
+++ b/styles/popup.css
@@ -98,7 +98,7 @@ button {
   width: 269px;
   height: 236px;
   left: 70px;
-  top: 180px;
+  top: 220px;
   position: absolute;
 }
 #reset-button {
@@ -118,4 +118,11 @@ button {
 #reset-button i {
   color: white;
   font-size: 24px;
+}
+#image1,
+#image2 {
+  width: 70%; /* 이미지 너비를 절반으로 조절합니다. */
+  position: absolute; /* 이미지의 위치를 절대적으로 지정합니다. */
+  top: 160px; /* 이미지를 상단에 위치시킵니다. */
+  left: 50px; /* 이미지를 왼쪽에 위치시킵니다. */
 }
