--- a/styles/chatbot.css
+++ b/styles/chatbot.css
@@ -119,7 +119,10 @@ body {
   justify-content: center;
   align-items: center;
 }
-
+#footer #send-button:hover {
+  background-color: #cbcbcb;
+  border: none;
+}
 #popup {
   position: absolute;
   top: 10px;
