--- a/styles/popup.css
+++ b/styles/popup.css
@@ -101,6 +101,11 @@ button {
   top: 220px;
   position: absolute;
 }
+
+#image:hover {
+  opacity: 0.5;
+}
+
 #reset-button {
   width: 50px;
   height: 50px;
@@ -119,10 +124,42 @@ button {
   color: white;
   font-size: 24px;
 }
-#image1,
-#image2 {
+
+#whisper-button:hover {
+  background-color: #ffe851;
+  border: none;
+}
+
+#reset-button:hover {
+  background-color: #ff4444;
+}
+
+#image2,
+#image3 {
   width: 70%; /* 이미지 너비를 절반으로 조절합니다. */
   position: absolute; /* 이미지의 위치를 절대적으로 지정합니다. */
   top: 160px; /* 이미지를 상단에 위치시킵니다. */
   left: 50px; /* 이미지를 왼쪽에 위치시킵니다. */
+}
+#image4,
+#image5 {
+  width: 70%;
+  position: absolute;
+  top: 150px;
+  left: 50px;
+}
+
+#image1,
+#image7 {
+  width: 30%;
+  position: absolute;
+  top: 160px;
+  left: 130px;
+}
+
+#image6 {
+  width: 50%;
+  position: absolute;
+  top: 160px;
+  left: 90px;
 }
